Displaying multiple series.

--- a/selectSubsetDF.ipynb
+++ b/selectSubsetDF.ipynb
@@ -1479,6 +1479,16 @@
    "id": "41ebc040",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "age_sex = titanic[[\"Age\", \"Sex\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea763927",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
