--- a/selectSubsetDF.ipynb
+++ b/selectSubsetDF.ipynb
@@ -1485,8 +1485,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ea763927",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     22.0\n",
+       "1     38.0\n",
+       "2     26.0\n",
+       "3     35.0\n",
+       "4     35.0\n",
+       "5      NaN\n",
+       "6     54.0\n",
+       "7      2.0\n",
+       "8     27.0\n",
+       "9     14.0\n",
+       "10     4.0\n",
+       "11    58.0\n",
+       "12    20.0\n",
+       "13    39.0\n",
+       "14    14.0\n",
+       "15    55.0\n",
+       "16     2.0\n",
+       "17     NaN\n",
+       "18    31.0\n",
+       "19     NaN\n",
+       "20    35.0\n",
+       "21    34.0\n",
+       "22    15.0\n",
+       "23    28.0\n",
+       "Name: Age, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age_sex.head(24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83f2a586",
    "metadata": {},
    "outputs": [],
    "source": []
