Combining data from multiple tables.

--- a/combining_multiple_tables.ipynb
+++ b/combining_multiple_tables.ipynb
@@ -9,8 +9,296 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cc382eb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4ae4e5cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_quality_no2 = pd.read_csv(\"air_quality_no2_long.csv\",\n",
+    "                              parse_dates=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "550a8627",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>country</th>\n",
+       "      <th>date.utc</th>\n",
+       "      <th>location</th>\n",
+       "      <th>parameter</th>\n",
+       "      <th>value</th>\n",
+       "      <th>unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>2019-06-21 00:00:00+00:00</td>\n",
+       "      <td>FR04014</td>\n",
+       "      <td>no2</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>µg/m³</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>2019-06-20 23:00:00+00:00</td>\n",
+       "      <td>FR04014</td>\n",
+       "      <td>no2</td>\n",
+       "      <td>21.8</td>\n",
+       "      <td>µg/m³</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>2019-06-20 22:00:00+00:00</td>\n",
+       "      <td>FR04014</td>\n",
+       "      <td>no2</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>µg/m³</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>2019-06-20 21:00:00+00:00</td>\n",
+       "      <td>FR04014</td>\n",
+       "      <td>no2</td>\n",
+       "      <td>24.9</td>\n",
+       "      <td>µg/m³</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>2019-06-20 20:00:00+00:00</td>\n",
+       "      <td>FR04014</td>\n",
+       "      <td>no2</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>µg/m³</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    city country                   date.utc location parameter  value   unit\n",
+       "0  Paris      FR  2019-06-21 00:00:00+00:00  FR04014       no2   20.0  µg/m³\n",
+       "1  Paris      FR  2019-06-20 23:00:00+00:00  FR04014       no2   21.8  µg/m³\n",
+       "2  Paris      FR  2019-06-20 22:00:00+00:00  FR04014       no2   26.5  µg/m³\n",
+       "3  Paris      FR  2019-06-20 21:00:00+00:00  FR04014       no2   24.9  µg/m³\n",
+       "4  Paris      FR  2019-06-20 20:00:00+00:00  FR04014       no2   21.4  µg/m³"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_quality_no2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a847ca34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_quality_pm25 = pd.read_csv(\"air_quality_pm25_long.csv\",\n",
+    "                               parse_dates=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "25f9e8be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_quality_pm25 = air_quality_pm25[[\"date.utc\", \"location\",\n",
+    "                                     \"parameter\", \"value\"]]\n",
+    "                                 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2b9047b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date.utc</th>\n",
+       "      <th>location</th>\n",
+       "      <th>parameter</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-06-18 06:00:00+00:00</td>\n",
+       "      <td>BETR801</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-06-17 08:00:00+00:00</td>\n",
+       "      <td>BETR801</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>6.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-06-17 07:00:00+00:00</td>\n",
+       "      <td>BETR801</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>18.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-06-17 06:00:00+00:00</td>\n",
+       "      <td>BETR801</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-06-17 05:00:00+00:00</td>\n",
+       "      <td>BETR801</td>\n",
+       "      <td>pm25</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    date.utc location parameter  value\n",
+       "0  2019-06-18 06:00:00+00:00  BETR801      pm25   18.0\n",
+       "1  2019-06-17 08:00:00+00:00  BETR801      pm25    6.5\n",
+       "2  2019-06-17 07:00:00+00:00  BETR801      pm25   18.5\n",
+       "3  2019-06-17 06:00:00+00:00  BETR801      pm25   16.0\n",
+       "4  2019-06-17 05:00:00+00:00  BETR801      pm25    7.5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "air_quality_pm25.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "18e07b2e",
+   "metadata": {},
+   "source": [
+    "## How to combine data from multiple tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebec5352",
+   "metadata": {},
+   "source": [
+    "### Concatenating objects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8930dde3",
+   "metadata": {},
+   "source": [
+    "#### I want to combine the measurements of `NO2` and `PM25`, two tables with a similar structure, in a single table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "94752bb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_quality = pd.concat([air_quality_pm25, air_quality_no2], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7518c73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_quality.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "814a862e",
    "metadata": {},
    "source": []
   }
@@ -22,7 +310,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.7"
   }
  },
